welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:4: error: ';' expected but '[' found.
			return [7:00];
                               ^alarmClock:6: error: ';' expected but '[' found.
			return [10:00];
                               ^alarmClock:10: error: ';' expected but '[' found.
			return [10:00];
                               ^